# pexsi

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README  README.md  build.sh.linux  cleanup-dep.sh  install-dep.sh  make.inc.colosseum  make.inc.hopper
Profiling/: 2d_comm_map.py  get_data.sh
cmake/: FindPTSCOTCH.cmake  PEXSIBasicDepends.cmake  PEXSICompileFlags.cmake  PEXSIConfig.cmake.in  PEXSIHandleLinAlg.cmake  PEXSIHandlePTSCOTCH.cmake  PEXSIHandleParMETIS.cmake  PEXSIHandleSuperLU.cmake  PEXSITPLDepends.cmake  TPLMacros.cmake
cmake/modules/: FindLinAlg.cmake  FindMETIS.cmake  FindParMETIS.cmake  FindSuperLU_DIST.cmake
config/: build.sh.CRAY_XC40.intel  build.sh.linux-gnu  build.sh.linux.gnu  build_parmetis.sh  build_superlu_dist.sh  make.inc.CRAY_XC30.intel  make.inc.edison  make.inc.edison.intel  make.inc.hopper  make.inc.hopper.intel  make.inc.hopper.pgi.profile  make.inc.hopper.scotch.pgi  make.inc.linux.gnu  make.inc.linux.ipm  make.inc.marenostrum.intel  make.inc.marenostrum.intel.profile  make.inc.ngchol  make.inc.osx  make.inc.osx.gnu  make.inc.osx.gnu.profile  toolchain.cmake.linux
config/toolchains/: cray-xc40.cmake  linux-gnu.cmake
developerdoc/: mainpage.md
doc/: FAQ.md  FAQ.rst  README  TODO.md  conf.py  corefunction.md  corefunction.rst  download.md  download.rst  electronicstructure.md  example.dox  example.md  function.dox  function.md  index.rst  install.dox  install.md  install.rst  introduction.dox  introduction.md  introduction.rst  mainpage.dox  mainpage.md  make.bat  optpackage.rst  selinv.md  todo.rst  troubleshooting.md  tutorial.md  tutorial.rst  utility.dox  utility.md
doc/source/: Introduction.rst  conf.py  download.rst  install.rst  introduction.rst  main.rst  troubleshooting.rst  tutorial.rst
examples/: CMakeLists.txt  Makefile  build.sh  driver2_ksdft.c  driver_fermi_complex.c  driver_ksdft.c  driver_ksdft_2.c  driver_ksdft_2_deprecate.c  driver_ksdft_3.c  driver_ksdft_new.c  driver_pselinv.c  driver_pselinv_complex.c  driver_pselinv_complex.out  driver_pselinv_complex_unsym.c  driver_pselinv_real.c  driver_pselinv_real_unsym.c  f_driver_pselinv_real.f90  f_interface.f90  f_ppexsi.f90  g20.matrix  identity_par.csc  identity_seq.csc  lap2d_par.csc  lap2d_seq.csc  lap2dc.matrix  lap2di.matrix  lap2dr.matrix  run_fermi.cpp  run_fermi_complex.cpp  run_inertia.cpp  run_ksdft.cpp  run_mumps.cpp  run_pexsi.cpp  run_ppexsi.cpp  run_ppexsi_old.cpp  run_pselinv.cpp  run_pselinv_asym.cpp  run_pselinv_d.cpp  run_pselinv_sympack.cpp  run_pselinv_unsym.cpp  (+2 more)
fortran/: CMakeLists.txt  Makefile  f_driver_ksdft.f90  f_driver_pselinv_complex.f90  f_driver_pselinv_complex_unsym.f90  f_driver_pselinv_real.f90  f_driver_pselinv_real_unsym.f90  f_interface.f90  f_interface_new.f90  lap2dr.matrix
include/: NumMat.hpp  NumMat_impl.hpp  NumTns.hpp  NumTns_impl.hpp  NumVec.hpp  NumVec_impl.hpp  SuperLUGrid.hpp  SuperLUGrid_impl.hpp  SuperLUMatrix.hpp  SuperLUMatrix_impl.hpp  blas.hpp  c_pexsi_interface.h  c_pexsi_interface_old.h  c_pexsi_new_interface.h  cal_reduce_rho.h  chem_pot.h  environment.hpp  environment_decl.hpp  environment_impl.hpp  getpolef.c  getpolef.h  lapack.hpp  mpi_interf.hpp  new_ppexsi.hpp  nummat_decl.hpp  nummat_impl.hpp  numtns_decl.hpp  numtns_impl.hpp  numvec_decl.hpp  numvec_impl.hpp  pexsi.hpp  pole.hpp  ppexsi.hpp  ppexsi_old.hpp  pselinv.hpp  pselinv_asym.hpp  pselinv_asym_impl.hpp  pselinv_impl.hpp  selinv.h  selinv_interf.h  (+22 more)
include/pexsi/: NumMat.hpp  NumMat_impl.hpp  NumTns_impl.hpp  NumVec.hpp  NumVec_impl.hpp  SuperLUGrid.hpp  SuperLUGrid_impl.hpp  SuperLUMatrix.hpp  SuperLUMatrix_impl.hpp  TreeBcast.hpp  TreeBcast_v2.hpp  TreeBcast_v2_impl.hpp  TreeReduce_v2.hpp  TreeReduce_v2_impl.hpp  blas.hpp  environment.hpp  (+33 more)
internaltests/: ex1.cpp  ex10.cpp  ex12.cpp  ex16.cpp  ex17.cpp  ex19.f90  ex27.cpp  ex29.cpp  ex30.cpp  ex31.cpp  ex32.cpp  ex33.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex9.cpp
src/: CMakeLists.txt  Makefile  blas.cpp  cal_reduce_rho.cpp  chem_pot.cpp  f_interface.f90  getPole.cpp  get_perm_c_parmetis.c  global.cpp  interface.cpp  interface_old.cpp  lapack.cpp  mpci.f  mpi_interf.cpp  new_interface.cpp  new_ppexsi.cpp  new_ppexsi_real.cpp  pdsymbfact.c  pexsi.cpp  pole.cpp  ppexsi.cpp  ppexsi.cpp.backup  ppexsi_lu.cpp  ppexsi_old.cpp  ppexsi_real.cpp  ppexsi_real_old.cpp  pselinv.cpp  pzsymbfact.c  seekeig.f  selinv.cpp  selinv_interf.cpp  slave_JB_Loop_Index_Compress_d.cpp  slave_JB_Loop_Index_Compress_dma_d.cpp  slave_JB_Loop_Index_Compress_dma_z.cpp  slave_JB_Loop_Index_Compress_z.cpp  slave_JB_Loop_d.cpp  slave_JB_Loop_z.cpp  slave_hello_world.cpp  sp_ienv.c  superlu_ComplexGridData.cpp  (+9 more)
testinternal/: Makefile  ex1.cpp  ex10.cpp  ex11.cpp  ex12.cpp  ex13.cpp  ex14.cpp  ex15.cpp  ex16.cpp  ex17.cpp  ex2.cpp  ex20.f90  ex21.cpp  ex24.cpp  ex27.cpp  ex3.cpp  ex30.cpp  ex31.cpp  ex32.cpp  ex33.cpp  ex6.cpp  ex7.cpp  ex8.cpp  unit_tests.cpp
tests/: Makefile  ex1.cpp  ex10.cpp  ex11.cpp  ex12.cpp  ex13.cpp  ex14.cpp  ex15.cpp  ex16.cpp  ex17.cpp  ex18.c  ex19.f90  ex2.cpp  ex20.f90  ex21.cpp  ex22.f90  ex24.cpp  ex27.cpp  ex29.cpp  ex3.cpp  ex30.cpp  ex32.cpp  ex33.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp  g20.symm.csc  ngchol.hpp  seekeig.f  taskwait1.cpp  taskwait2.cpp
utilities/: CSC2Bin.m  DOSInertia.m  DeserializeDistSparseMatrix.m  GSelInvElem.m  GSelInvtmp.m  LU_factor.m  PreSelInv.m  PreSelInvUnsym.m  ReadBinSparseMatrix.m  ReadComplexSIESTASparseMatrix.m  ReadComplexSparseMatrixUnformatted.m  ReadSparseMatrix.m  ReadSparseMatrixFormatted.m  ReadSparseMatrixUnformatted.m  SelInv.m  SelInv2.m  SelInv3.m  SelInv4.m  SelInvAsym2.m  SelInvAsym3.m  SelInvElem.m  SelInvMirrorLeft.m  SelInvMirrorLeftNoSymbolic.m  SelInvMirrorLeftSym.m  SelInvMirrorRight.m  SelInvMirrorRightSym.m  SelInvRefine.m  WriteSIESTASparseMatrix.m  WriteSIESTASparseMatrix2.m  WriteSparseMatrix.m  WriteSparseMatrix2.m  WriteSparseMatrixLU.m  WriteSparseMatrixLU2.m  WriteSparseMatrixUnsym.m  deserialize.m  ellipjc.m  ellipkkp.m  fermidirac.m  fermidiracDrvMu.m  fermidiracDrvT.m  (+18 more)
website/: Makefile  conf.py
(+16 files in other folders)
